baml_language/crates/baml_tests/snapshots/broken_syntax/parser_error_recovery/baml_tests__parser_error_recovery__01_lexer__missing_braces.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Class "class"
Word "User"
LBrace "{"
Word "name"
Word "string"
Slash "/"
Slash "/"
Word "Missing"
Word "closing"
Word "brace"
Class "class"
Word "Another"
LBrace "{"
Slash "/"
Slash "/"
Word "Should"
Word "still"
Word "parse"
Word "this"
Class "class"
Word "field"
Word "int"
RBrace "}"
